push MbileNet Model

--- a/image_preprocessing.ipynb
+++ b/image_preprocessing.ipynb
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -100,7 +100,6 @@
         "val_csv[\"source_split\"] = \"val\"\n",
         "all_videos = pd.concat([train_csv, val_csv], ignore_index=True)\n",
         "\n",
-        "# Map numeric labels (0–4) to exactly 5 canonical class names\n",
         "label_to_class = {\n",
         "    0: \"Left_Swipe\",\n",
         "    1: \"Right_Swipe\",\n",
@@ -109,13 +108,11 @@
         "    4: \"Thumbs_Up\",\n",
         "}\n",
         "\n",
-        "# Add a clean class_name column based only on the numeric label\n",
         "all_videos[\"class_name\"] = all_videos[\"label\"].map(label_to_class)\n",
         "\n",
-        "# Also overwrite the gesture column so later code uses only these 5 names\n",
         "all_videos[\"gesture\"] = all_videos[\"class_name\"]\n",
         "\n",
-        "print(\"\\nTotal number of videos (rows):\", len(all_videos))\n",
+        "print(\"\\nTotal number of videos:\", len(all_videos))\n",
         "print(\"Canonical class names (from numeric labels):\", all_videos[\"class_name\"].unique())\n",
         "print(\"Unique numeric labels:\", sorted(all_videos[\"label\"].unique()))\n"
       ]
