--- a/mobilenet_transfer.ipynb
+++ b/mobilenet_transfer.ipynb
@@ -53,33 +53,28 @@
     "df = pd.read_csv(CSV_PATH)\n",
     "df['file_path'] = df['file_path'].apply(lambda x: x.replace('\\\\', os.sep)) \n",
     "\n",
-    "# Create Splits\n",
     "train_df = df[df[\"split\"] == \"train\"]\n",
     "val_df   = df[df[\"split\"] == \"val\"]\n",
     "test_df  = df[df[\"split\"] == \"test\"]\n",
     "\n",
     "def load_npy_file(path, label):\n",
-    "    # Load video (Shape: Variable frames, 64, 64, 3)\n",
     "    video = np.load(path.numpy().decode(\"utf-8\")) \n",
     "    \n",
-    "    # Sampling Strategy: Force exactly 30 frames\n",
     "    total_frames = video.shape[0]\n",
     "    target_frames = NUM_FRAMES\n",
     "    \n",
     "    if total_frames == target_frames:\n",
     "        sampled_video = video\n",
     "    else:\n",
-    "        # Uniformly sample indices\n",
     "        indices = np.linspace(0, total_frames - 1, target_frames).astype(int)\n",
     "        sampled_video = video[indices]\n",
     "        \n",
-    "    # Note: Data is already 0.0-1.0 from preprocessing. Do NOT divide by 255 again.\n",
     "    return sampled_video.astype(\"float32\"), np.int32(label)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,18 +84,15 @@
     "    label.set_shape(())\n",
     "    return video, label\n",
     "\n",
-    "# --- Helper: Data Augmentation ---\n",
     "def augment_video(video, label):\n",
-    "    # Random Flip (Horizontal)\n",
     "    video = tf.image.random_flip_left_right(video)\n",
-    "    # Random Brightness\n",
     "    video = tf.image.random_brightness(video, max_delta=0.1)\n",
     "    return video, label"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -263,31 +255,25 @@
    ],
    "source": [
     "# 3. Build Model (MobileNetV2 Transfer)\n",
-    "# ==========================================\n",
     "def build_mobilenet_transfer_model():\n",
-    "    # Input: (30 frames, 64x64 images, 3 channels)\n",
     "    inputs = layers.Input(shape=(NUM_FRAMES, 64, 64, 3))\n",
     "    \n",
     "    # Preprocessing: Resize 64->128, Rescale 0..1 -> -1..1\n",
     "    x = layers.TimeDistributed(layers.Resizing(IMG_SIZE, IMG_SIZE))(inputs)\n",
     "    x = layers.TimeDistributed(layers.Rescaling(2.0, offset=-1.0))(x)\n",
     "    \n",
-    "    # MobileNetV2 Base (Frozen)\n",
     "    base_model = applications.MobileNetV2(\n",
     "        include_top=False, \n",
     "        weights='imagenet', \n",
     "        input_shape=(IMG_SIZE, IMG_SIZE, 3),\n",
-    "        pooling='avg' # Flattens output to (1280,) per frame\n",
+    "        pooling='avg'\n",
     "    )\n",
     "    base_model.trainable = False \n",
     "    \n",
-    "    # Apply to all frames\n",
     "    x = layers.TimeDistributed(base_model)(x)\n",
     "    \n",
-    "    # Aggregate features (Average across 30 frames)\n",
     "    x = layers.GlobalAveragePooling1D()(x)\n",
     "    \n",
-    "    # Classifier Head\n",
     "    x = layers.Dense(256, activation=\"relu\")(x)\n",
     "    x = layers.Dropout(0.3)(x)\n",
     "    outputs = layers.Dense(num_classes, activation=\"softmax\")(x)\n",
@@ -300,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +326,6 @@
    ],
    "source": [
     "# 4. Phase 1: Initial Training\n",
-    "# ==========================================\n",
     "model.compile(\n",
     "    optimizer=optimizers.Adam(learning_rate=0.0005),\n",
     "    loss=\"sparse_categorical_crossentropy\",\n",
@@ -357,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -393,8 +378,6 @@
    ],
    "source": [
     "# 5. Phase 2: Fine-Tuning\n",
-    "print(\"\\nStarting Phase 2: Fine-Tuning...\")\n",
-    "\n",
     "base_model = model.layers[3].layer \n",
     "\n",
     "base_model.trainable = True\n",
@@ -419,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +418,6 @@
    ],
    "source": [
     "# 6. Combined Visualization\n",
-    "# ==========================================\n",
     "acc = history.history['accuracy'] + history_fine.history['accuracy']\n",
     "val_acc = history.history['val_accuracy'] + history_fine.history['val_accuracy']\n",
     "loss = history.history['loss'] + history_fine.history['loss']\n",
@@ -460,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -489,8 +471,6 @@
     }
    ],
    "source": [
-    "print(\"\\nRunning Final Evaluation on Test Set...\")\n",
-    "\n",
     "# Get Predictions\n",
     "y_true = []\n",
     "y_probs = []\n",
@@ -504,11 +484,9 @@
     "y_probs = np.concatenate(y_probs, axis=0)\n",
     "y_pred = np.argmax(y_probs, axis=1)\n",
     "\n",
-    "# Metrics\n",
     "acc = accuracy_score(y_true, y_pred)\n",
     "print(f\"\\nFinal Test Accuracy: {acc*100:.2f}%\")\n",
     "\n",
-    "# Class Names\n",
     "label_to_name = df[[\"label\", \"gesture\"]].drop_duplicates().set_index(\"label\")[\"gesture\"].to_dict()\n",
     "class_names = [label_to_name[i] for i in range(num_classes)]\n",
     "\n",
