--- a/image_preprocessing.ipynb
+++ b/image_preprocessing.ipynb
@@ -10,14 +10,12 @@
         "2. Check that every video folder and its images exist.\n",
         "3. Split videos into train / validation / test sets.\n",
         "4. Resize and normalize images, and save them in a clean format.\n",
-        "5. Balance the training set by creating extra (augmented) videos for minority classes.\n",
-        "\n",
-        "The goal is a **clean, balanced, ready‑to‑train dataset** in a directory called `processed_dataset/`.\n"
+        "5. Balance the training set by creating extra (augmented) videos for minority classes.\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -35,7 +33,6 @@
         "random.seed(RANDOM_SEED)\n",
         "np.random.seed(RANDOM_SEED)\n",
         "\n",
-        "# Step 1: Define constants and paths\n",
         "DATASET_DIR = \"dataset\"\n",
         "TRAIN_DIR = os.path.join(DATASET_DIR, \"train\")\n",
         "TRAIN_CSV = os.path.join(DATASET_DIR, \"train.csv\")\n",
@@ -47,11 +44,9 @@
         "if not os.path.exists(OUTPUT_DIR):\n",
         "    os.makedirs(OUTPUT_DIR)\n",
         "\n",
-        "# Image dimensions\n",
         "IMG_WIDTH = 64\n",
         "IMG_HEIGHT = 64\n",
         "\n",
-        "# Train / validation / test split ratios\n",
         "TRAIN_RATIO = 0.7\n",
         "VAL_RATIO = 0.15\n",
         "TEST_RATIO = 0.15"
@@ -82,7 +77,7 @@
         }
       ],
       "source": [
-        "# Step 1: Load CSV files and look at them\n",
+        "# Step 1: Load CSV files\n",
         "\n",
         "# video_folder_name;    gesture_name;   numeric_label\n",
         "column_names = [\"video_id\", \"gesture\", \"label\"]\n",
@@ -95,7 +90,6 @@
         "\n",
         "print(train_csv.head())\n",
         "\n",
-        "# Combine for easier processing; remember original source split\n",
         "train_csv[\"source_split\"] = \"train\"\n",
         "val_csv[\"source_split\"] = \"val\"\n",
         "all_videos = pd.concat([train_csv, val_csv], ignore_index=True)\n",
@@ -119,7 +113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -153,9 +147,7 @@
         }
       ],
       "source": [
-        "# Step 2: Add folder paths and remove obviously bad entries\n",
         "\n",
-        "# For each row, build the path to the video folder that contains its images\n",
         "video_paths = []\n",
         "\n",
         "for idx, row in all_videos.iterrows():\n",
@@ -168,14 +160,12 @@
         "\n",
         "all_videos[\"video_folder\"] = video_paths\n",
         "\n",
-        "# Keep only rows where the folder actually exists\n",
         "exists_mask = all_videos[\"video_folder\"].apply(os.path.isdir)\n",
         "clean_meta = all_videos[exists_mask].copy()\n",
         "\n",
         "print(\"Total videos:\", len(all_videos))\n",
         "print(\"Videos with existing folders:\", len(clean_meta))\n",
         "\n",
-        "# count how many PNG images each folder has; drop folders with 0 images\n",
         "num_frames = []\n",
         "\n",
         "for folder in clean_meta[\"video_folder\"]:\n",
@@ -187,7 +177,6 @@
         "print(\"\\nFrame count statistics (before dropping empties):\")\n",
         "print(clean_meta[\"num_frames\"].describe())\n",
         "\n",
-        "# Remove videos that have no frames\n",
         "clean_meta = clean_meta[clean_meta[\"num_frames\"] > 0].reset_index(drop=True)\n",
         "\n",
         "print(\"\\nRemaining videos after cleaning:\", len(clean_meta))\n",
@@ -197,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -238,11 +227,9 @@
         }
       ],
       "source": [
-        "# Step 3: Create train / validation / test splits (video level)\n",
         "\n",
         "labels = clean_meta[\"label\"]\n",
         "\n",
-        "# First split: train+val vs test\n",
         "train_val_meta, test_meta = train_test_split(\n",
         "    clean_meta,\n",
         "    test_size=TEST_RATIO,\n",
@@ -250,7 +237,6 @@
         "    random_state=RANDOM_SEED,\n",
         ")\n",
         "\n",
-        "# Second split: train vs val (from the train_val set)\n",
         "val_ratio_adjusted = VAL_RATIO / (TRAIN_RATIO + VAL_RATIO)\n",
         "\n",
         "train_meta, val_meta = train_test_split(\n",
@@ -274,16 +260,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Step 4: load, resize, and normalize a whole video\n",
         "\n",
-        "# We will save each processed video as a NumPy array file (.npy)\n",
-        "# with shape: (num_frames, IMG_HEIGHT, IMG_WIDTH, 3)\n",
-        "# Pixel values will be in the range [0, 1].\n",
-        "\n",
+        "# save each processed video as a NumPy array file (.npy)\n",
         "\n",
         "def load_and_process_video(folder_path):\n",
         "    \"\"\"Load all PNG images from a folder, resize them, normalize them, and\n",
@@ -301,23 +284,21 @@
         "            print(\"Could not open image, skipping whole video:\", file_path, \"Error:\", e)\n",
         "            return None\n",
         "\n",
-        "        # Resize image\n",
         "        img = img.resize((IMG_WIDTH, IMG_HEIGHT))\n",
         "\n",
-        "        # Convert to NumPy array and normalize to [0, 1]\n",
         "        arr = np.array(img, dtype=\"float32\") / 255.0\n",
         "        frames.append(arr)\n",
         "\n",
         "    if len(frames) == 0:\n",
         "        return None\n",
         "\n",
-        "    video_array = np.stack(frames, axis=0)  # shape: (num_frames, H, W, 3)\n",
+        "    video_array = np.stack(frames, axis=0)  \n",
         "    return video_array\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -351,11 +332,9 @@
         }
       ],
       "source": [
-        "# Step 5: Process videos \n",
         "\n",
         "processed_records = [] \n",
         "\n",
-        "# Create split folders inside OUTPUT_DIR\n",
         "for split_name in [\"train\", \"val\", \"test\"]:\n",
         "    split_folder = os.path.join(OUTPUT_DIR, split_name)\n",
         "    if not os.path.exists(split_folder):\n",
@@ -373,25 +352,21 @@
         "        label = int(row[\"label\"])\n",
         "        folder = row[\"video_folder\"]\n",
         "\n",
-        "        # Build output folder and file path\n",
         "        gesture_folder = os.path.join(OUTPUT_DIR, split_name, gesture)\n",
         "        if not os.path.exists(gesture_folder):\n",
         "            os.makedirs(gesture_folder)\n",
         "\n",
         "        out_file_path = os.path.join(gesture_folder, video_id + \".npy\")\n",
         "\n",
-        "        # Load and process\n",
         "        video_array = load_and_process_video(folder)\n",
         "\n",
         "        if video_array is None:\n",
         "            count_bad += 1\n",
         "            continue\n",
         "\n",
-        "        # Save as .npy\n",
         "        np.save(out_file_path, video_array)\n",
         "        count_ok += 1\n",
         "\n",
-        "        # Add to metadata list\n",
         "        processed_records.append(\n",
         "            {\n",
         "                \"split\": split_name,\n",
@@ -418,7 +393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -458,17 +433,10 @@
         }
       ],
       "source": [
-        "# Step 6: Balance the training set using simple data augmentation\n",
-        "\n",
-        "# We will create extra videos for classes that have fewer samples.\n",
-        "# Augmentation: for each new video, we will take an existing one and\n",
-        "# horizontally flip every frame.\n",
-        "\n",
         "meta_df = pd.DataFrame(processed_records)\n",
         "\n",
         "train_meta_df = meta_df[meta_df[\"split\"] == \"train\"].copy()\n",
         "\n",
-        "# Compute how many samples each class has\n",
         "label_counts = train_meta_df[\"label\"].value_counts()\n",
         "max_count = label_counts.max()\n",
         "\n",
@@ -487,32 +455,25 @@
         "\n",
         "    print(f\"\\nAugmenting label {label_value} (need {needed} more videos)\")\n",
         "\n",
-        "    # All videos from this class in the train split\n",
         "    class_videos = train_meta_df[train_meta_df[\"label\"] == label_value].reset_index(drop=True)\n",
         "\n",
         "    for i in range(needed):\n",
-        "        # Pick a random existing video from this class\n",
         "        source_row = class_videos.sample(n=1, random_state=random.randint(0, 1_000_000)).iloc[0]\n",
         "\n",
         "        source_path = source_row[\"file_path\"]\n",
         "        source_video_id = source_row[\"video_id\"]\n",
         "        gesture = source_row[\"gesture\"]\n",
         "\n",
-        "        # Load the stored NumPy array\n",
         "        video_array = np.load(source_path)\n",
         "\n",
         "        # Augmentation: horizontal flip (reverse width axis)\n",
-        "        # video_array shape: (num_frames, H, W, 3)\n",
         "        flipped = video_array[:, :, ::-1, :]\n",
         "\n",
-        "        # New video id and path\n",
         "        new_video_id = f\"{source_video_id}_aug{i}\"\n",
         "        new_file_path = os.path.join(OUTPUT_DIR, \"train\", gesture, new_video_id + \".npy\")\n",
         "\n",
-        "        # Save augmented video\n",
         "        np.save(new_file_path, flipped)\n",
         "\n",
-        "        # Record metadata\n",
         "        new_augmented_records.append(\n",
         "            {\n",
         "                \"split\": \"train\",\n",
@@ -528,7 +489,6 @@
         "\n",
         "print(\"\\nNumber of new augmented train videos:\", len(new_augmented_records))\n",
         "\n",
-        "# Update full metadata\n",
         "if new_augmented_records:\n",
         "    meta_df = pd.concat([meta_df, pd.DataFrame(new_augmented_records)], ignore_index=True)\n",
         "\n",
@@ -540,7 +500,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -552,29 +512,10 @@
         }
       ],
       "source": [
-        "# Save full metadata for all splits\n",
         "meta_csv_path = os.path.join(OUTPUT_DIR, \"videos_metadata.csv\")\n",
         "meta_df.to_csv(meta_csv_path, index=False)\n",
         "\n",
         "print(\"Saved metadata to:\", meta_csv_path)\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Summary\n",
-        "\n",
-        "In this notebook we:\n",
-        "\n",
-        "- **Loaded** the gesture recognition CSV files and built a simple table of all videos.\n",
-        "- **Checked folders and frames**, removing videos that were missing or empty.\n",
-        "- **Split** the data into train, validation, and test sets at the video level.\n",
-        "- **Resized and normalized** all images, saving each video as a `.npy` file with pixel values in \\([0, 1]\\).\n",
-        "- **Balanced the training set** by adding horizontally‑flipped copies of videos from smaller classes.\n",
-        "- **Saved metadata** about every processed video in `processed_dataset/videos_metadata.csv`.\n",
-        "\n",
-        "You can now load the `.npy` files and metadata in your training notebook and focus on building your model.\n"
       ]
     }
   ],
